--- a/src/main/resources/templates/list-users.html
+++ b/src/main/resources/templates/list-users.html
@@ -49,7 +49,7 @@
 
                 <a th:href="@{/api/deleteUser(userId=${tempUsers.userId})}"
                    class="btn btn-danger btn-sm"
-                   onclick="if (!(confirm('Are you sure you want to delete this book?'))) return false">
+                   onclick="if (!(confirm('Are you sure you want to delete this user?'))) return false">
                     Delete
                 </a>
             </td>
